force-app/main/default/objects/Student__c/fields/AGE__c.field-meta.xml
<CustomField>
    <fullName>AGE__c</fullName>
    <formula>YEAR( TODAY() )   - YEAR(DOB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AGE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>