force-app/main/default/objects/Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>VII</fullName>
            </value>
            <value>
                <fullName>VIII</fullName>
            </value>
            <value>
                <fullName>IX</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>