force-app/main/default/objects/Student__c/fields/Parent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phone__c</fullName>
    <label>Parent Phone</label>
    <type>Phone</type>
</CustomField>