force-app/main/default/objects/Student__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>Teacher__r.School__r.Name &amp;&quot;,&quot;&amp; TEXT(Teacher__r.School__r.City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>