force-app/main/default/objects/Student__c/fields/StudentID__c.field-meta.xml
<CustomField>
    <fullName>StudentID__c</fullName>
    <label>StudentID</label>
    <type>AutoNumber</type>
</CustomField>